# LiuJiaTong

./: .gitignore  README.md  card.py  logger.py  main.py  migration_plan.md  my_network.py  pyproject.toml  requirements.txt  utils.py
cli/: __main__.py  card_utils.py  interface_cli.py  terminal_printer.py  terminal_utils.py
client/: FieldInfo.py  __init__.py  __main__.py  card_utils.py  client.py  gui.py  gui_tkinter.py  interface.py  interface_cli.py  main.py  myclient.py  playing_handler.py  playingrules.py  terminal_printer.py  terminal_utils.py  userinfo.py
client/feature_auto_play/: auto_play.py
client/sound/: __init__.py
client/user_interface/: __init__.py  gui_flet.py
client_dart/: README.md  pubspec.yaml
client_dart/android/app/: build.gradle.kts
client_dart/assets/sounds/: README.md
client_dart/docs/: protocol.md
client_dart/ios/Runner/: Info.plist
client_dart/ios/Runner.xcodeproj/: project.pbxproj
client_dart/lib/: main.dart
client_dart/linux/: CMakeLists.txt
client_dart/test/: README.md  widget_test.dart
client_dart/web/: index.html  manifest.json
client_dart/windows/: CMakeLists.txt
common/: __init__.py  card_io.py  console.py
core/: FieldInfo.py  __init__.py  card.py  config.py  logger.py  playingrules.py
core/auto_play/: __init__.py  strategy.py
core/network/: my_network.py
core/sound/: __init__.py
docs/: Call Graph.drawio  GAMERULES.md  GUI_v1.drawio  README.md  project_structure.txt  protocol.md
gui_flet/: gui_flet.py  main.py
gui_kivy/: __init__.py  gui_kivy.py
gui_tkinter/: gui_tkinter.py
network/: my_network.py  my_network_json.py
scripts/: build_apk.ps1  test.ps1  test.sh  test_auto_play.py  test_cli_5.ps1  test_my_network.py  test_simulation.ps1  test_utils.py
server/: __init__.py  __main__.py  game_handler.py  game_vars.py  main.py  manager.py  onlooker.py  player.py  state_machine.drawio  state_machine.py
test/: test.ps1  test_auto_play.py  test_card.py  test_my_network.py  test_playingrules.py  test_simulation.ps1  test_utils.py
utils/: __init__.py  card.py  my_network.py
(+37 files in other folders)
